# murder-mystery

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  run.sh
backend/: pyproject.toml
backend/app/: config.py  game_state.py  main.py  models.py
backend/app/basta/: __init__.py  config.py  game_state.py  info.py  models.py  scoring.py
backend/app/funny_questions/: config.py  game_state.py  info.py  models.py  questions.py  scoring.py
backend/app/murder_mystery/: config.py  game_state.py  info.py  models.py
backend/app/prisoners_dilemma/: __init__.py  config.py  game_logic.py  game_state.py  info.py  models.py
backend/app/puzzle/: clues.py  distributor.py  generator.py  murder.py  pipeline.py  relabel.py  schema.py  selector.py  solver.py  value_mapping.py
backend/app/routes/: game.py  lobby.py  ws.py
backend/app/shared/: config.py  game_state.py  models.py
backend/app/werewolf/: config.py  game_logic.py  game_state.py  info.py  models.py  roles.py
backend/data/puzzles/: 10p_hard_1.json  10p_hard_2.json  10p_harder_0.json  10p_harder_1.json  10p_harder_2.json  10p_hardest_0.json  10p_hardest_2.json  10p_medium_1.json  11p_hard_1.json  11p_harder_1.json  11p_hardest_0.json  11p_hardest_1.json  11p_medium_2.json  12p_easy_1.json  12p_hard_1.json  12p_harder_0.json  12p_hardest_0.json  12p_hardest_1.json  12p_hardest_2.json  12p_medium_0.json  12p_medium_2.json  (+39 more)
backend/scripts/: README.md  pregenerate.py
backend/tests/: test_api.py  test_basta.py  test_funny_questions.py  test_prisoners_dilemma.py  test_puzzle.py  test_werewolf.py
(+201 files in other folders)
